--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">PotatoInvitation</string>
+
+    <string name="input_invitation">초대말 입력</string>
+    <string name="input_date">날짜/시간 입력</string>
+    <string name="input_location">장소 입력</string>
+    <string name="input_photo">사진 등록</string>
+    <string name="input_invitation_title">초대장의 제목을 입력해주세요</string>
+
+    <string name="format_invitation_description_count">%d 자</string>
 </resources>
