--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="format_invitation_description_count">%d 자</string>
     <string name="share">공유하기</string>
     <string name="complete">완료하기</string>
+    <string name="make_invitation">초대장 만들기</string>
 </resources>
