--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,10 @@
 <resources>
     <string name="app_name">PotatoInvitation</string>
+    <string name="guide_comment_type_choice">원하는 유형을\n선택해볼까요?</string>
+    <string name="start_comment_type_choice">초대장 시작하기</string>
+    <string name="make_suggest_type_default">새로운 초대장을 만들어 볼까요?</string>
+    <string name="make_suggest_type_editing">만들었던 초대장을 수정해볼까요?</string>
+    <string name="description_type_default">난 너가 와줬으면 좋겠어\n와줄꺼지?</string>
 
     <string name="input_invitation">초대말 입력</string>
     <string name="input_date">날짜/시간 입력</string>
@@ -23,5 +28,4 @@
     <string name="input_address_example_text">예시) 서울시 송파구 오금동, 유튜브, 링크</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="input_address_btn_text">입력 완료하기</string>
-
 </resources>
