--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,9 @@
     <string name="input_address_example_text">예시) 서울시 송파구 오금동, 유튜브, 링크</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="input_address_btn_text">입력 완료하기</string>
+
+    <string name="dialog_network_error_title">잠시만요!</string>
+    <string name="dialog_network_error_subtitle">404 ERROR</string>
+    <string name="dialog_network_error_description">이전 페이지로 돌아가\n다시 시도해주세요.</string>
+    <string name="dialog_network_error_button">이전 페이지로 돌아가기</string>
 </resources>
