--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,8 +31,8 @@
     <string name="input_address_question">어떤 장소에서\n만날까요?</string>
     <string name="input_address_search_text">주소를 검색해주세요.</string>
     <string name="input_address_example_text">예시) 서울시 송파구 오금동, 유튜브, 링크</string>
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="input_address_btn_text">입력 완료하기</string>
+    <string  name="input_address_road_title">도로명</string>
 
     <string name="dialog_network_error_title">잠시만요!</string>
     <string name="dialog_network_error_subtitle">404 ERROR</string>
