--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,9 @@
     <string name="make_suggest_type_editing">만들었던 초대장을 수정해볼까요?</string>
     <string name="description_type_default">난 너가 와줬으면 좋겠어\n와줄꺼지?</string>
 
+    <string name="list_create_date">%s 제작</string>
+    <string name="list_empty">아직 초대장이 없어요!\n어서 새로운 초대장을 만들어주세요.</string>
+
     <string name="input_invitation">초대말 입력</string>
     <string name="input_date">날짜/시간 입력</string>
     <string name="input_location">장소 입력</string>
