--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,10 @@
     <string name="make_suggest_type_editing">만들었던 초대장을 수정해볼까요?</string>
     <string name="description_type_default">난 너가 와줬으면 좋겠어\n와줄꺼지?</string>
 
+    <string name="tutorial_title">애교만점형</string>
+    <string name="tutorial_notice">양옆 화살표 방향으로 스크롤해서\n원하는 유형을 선택해보세요!</string>
+    <string name="tutorial_button_ok"><u>확인 완료</u></string>
+
     <string name="list_create_date">%s 제작</string>
     <string name="list_empty">아직 초대장이 없어요!\n어서 새로운 초대장을 만들어주세요.</string>
 
